# mynixpkgs

./: .ent.el  .gitignore  README.org  add-package-nix.bb  flake.nix
pkgs/aws-vpn-client/: default.nix  openvpn.nix
pkgs/aws2-wrap/: default.nix
pkgs/cljstyle/: default.nix  flake.nix  package.nix
pkgs/combobulate/: default.nix  flake.nix
pkgs/dbeaver/: default.nix
pkgs/ent/: default.nix  flake.nix
pkgs/etrans/: default.nix
pkgs/ollama/: default.nix  flake.nix  package.nix
pkgs/rcu/: default.nix
pkgs/rmview/: default.nix
pkgs/splint/: deps-lock.json  flake.nix
templates/: templates.nix
templates/awsproj/: .ent.el  .envrc  Notebook.org  bb.edn  deps.edn  flake.nix
templates/awsproj/admin/: dev.ovpn
templates/cljproj/: .ent.el  .envrc  .gitignore  README.org  bb.edn  build.clj  deps.edn  flake.nix
templates/cljproj/hooks/: pre-push
templates/flake/: flake.nix
templates/lpyproj/: .ent.el  .envrc  .gitignore  Notebook.org  README.org  bb.edn  flake-poetry.nix  flake.nix  pyproject.toml
templates/lpyproj/src/lpyproj/: __init__.py  core.lpy
templates/pyproj/: .ent.el  .envrc  .gitignore  flake.nix  pyproject.toml
templates/pyproj/hooks/: pre-push  prepare-commit-msg
