[project]
name = "lpyproj"
version = "0.1.0"
description = "Template for basilisp projects"
authors = [{ name = "Dan Pomohaci", email = "dan.pomohaci@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "basilisp>=0.3.5",
]

[project.scripts]
lpyproj = "lpyproj:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lpyproj"]

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
