[tool.poetry]
name = "pyproj"
version = "0.1"
description = ""
authors = []
readme = "README.md"
packages = [{include = "pyproj"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ipython = "^8.29.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pytest = "^8.3.2"
python-lsp-server= {extras = ["all"], version = "^1.12.0"}
ruff = "^0.7.3"
semgrep = "^1.97.0"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.flake8]
ignore = "E501"
max-line-length = 120 

[tool.ruff.lint]
ignore = ["E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
